2007-04-17  Trent Fisher  <trent@phaedrus.veganmilitia.org>

	* js/ui/win.js (shipBay): new routine to create ship bay
	popup.  need to figure out how to name these things

2007-04-16  Trent Fisher  <trent@phaedrus.veganmilitia.org>

	* test/xpath.html:
	doesn't work in IE 6.02900.2180.xpsp_sp2_gdr.161219-0316
	this line (in xml.js) causes an exception
	return context.selectSingleNode(this.xpathText);
	everything looks fine up until then.
	nope, it appears that context is blank due to the previous if
	doc.documentElement is null
	My patience for IE has run out.

2007-04-15  Trent Fisher  <trent@phaedrus.veganmilitia.org>

	* js/ui/win.js (function): 
	move window creation functions here
	add in XML use
	works on safari and firefox

	* dat/skin/default.xml: 
	change alt to title for mouseovers

	* js/util/xml.js: 
	the problem seems to be that the xpath wrapper does not follow w3c
	standards (because firefox is sloppy)
	http://my.opera.com/hallvors/blog/show.dml/429702
	fixed!

	* test/xpath.html: wrote a test case

2007-04-14  Trent Fisher  <trent@localhost.localdomain>

	* js/main.js (startGame): 
	/skin/ship/img[@id='pod']/@src
	fails in opera...
	WRONG_DOCUMENT_ERR

	* xml.js: from the o'reilly book
	throws an exception.
	firefox has XML defined as a function (which doesn't seem to do
	anything).
	experiment with xpath
	XML.getNode(conf["dat/skin/default.xml"], "/skin/ship/map[@name='pod']")
	XML.getNode(conf["dat/skin/default.xml"], "/skin/ship/map[@name='pod']/area[1]")
	XML.getNode(conf["dat/skin/default.xml"], "/skin/ship/map[@name='pod']/area[1]/@alt")
	that will be an easier way to deal with things.

	* js/main.js (loadGame): separate out the XML and img callbacks
	no crash!
	got an uncaught exception...
	The callback for an img gets a "load" object 
	the image is in currentTarget

	* js/util/httpreq.js (requestImage): crash happens during the
	callback... first callback

	* js/main.js: cool!  I just crashed Firefox!